# cbrkit

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  default.nix  docs.nix  flake.nix  pyproject.toml  test.ipynb
.github/workflows/: autofix.yml  check.yml  ci.yml  release.yml
cbrkit/: __init__.py  __main__.py  adaptation.py  api.py  cli.py  helpers.py  load.py  loaders.py  model.py  retrieval.py  retrieve.py  reuse.py  similarity.py  taxonomy.py  typing.py
cbrkit/adapt/: __init__.py  _attribute_value.py  generic.py  numbers.py  strings.py
cbrkit/case_sim/: __init__.py  factories.py  generic.py  helpers.py  tabular.py
cbrkit/data_sim/: __init__.py  _taxonomy.py  collections.py  generic.py  helpers.py  numeric.py  strings.py
cbrkit/eval/: __init__.py  _base.py  _common.py  _retrieval.py
cbrkit/global_sim/: __init__.py  _aggregate.py  _attribute_value.py
cbrkit/global_sim/_graph/: astar.py
cbrkit/global_sim/graph/: __init__.py  _astar.py  _model.py
cbrkit/sim/: __init__.py  _aggregator.py  _attribute_value.py  _helpers.py  _taxonomy.py  collections.py  factories.py  generic.py  helpers.py  numbers.py  numeric.py  strings.py  taxonomy.py
cbrkit/sim/graph/: __init__.py  _astar.py  _astar_rustworkx.py  _model.py
cbrkit/sim/graphs/: _astar.py  _isomorphism.py  _model.py  dtw_smithwaterman.py
cbrkit/sim/strings/: __init__.py  _taxonomy.py  taxonomy.py
data/: cars-1.yaml  cars-1k.csv  cars-1k.toml  cars-1k.yaml  cars-taxonomy.yaml  cars_validation_model.py  graphs-v2-baseline.json  graphs-v2.json  graphs.json  nest_cars.py
examples/: cars_large.py  cars_rag.py  cars_rag_large.py  cars_retriever.py  cars_system.py
src/cbrkit/: __init__.py  api.py  cli.py  constants.py  cycle.py  decoders.py  dumpers.py  encoders.py  filter.py  helpers.py  indexable.py  loaders.py  model.py  retrieval.py  reuse.py  system.py  typing.py
src/cbrkit/adapt/: __init__.py  _attribute_value.py  attribute_value.py  genai.py  generic.py  numbers.py  rag.py  strings.py  synthesis.py
src/cbrkit/eval/: __init__.py  _common.py  _retrieval.py  common.py  retrieval.py
src/cbrkit/genai/: __init__.py  _model.py  _wrappers.py  prompts.py  providers.py
src/cbrkit/generate/: __init__.py
src/cbrkit/indexable/: __init__.py  _common.py  chromadb.py  lancedb.py  pgvector.py  postgresql.py  sqlalchemy.py  sqlite_vec.py  zvec.py
src/cbrkit/model/: __init__.py  graph.py  result.py
src/cbrkit/rag/: __init__.py  _apply.py  _build.py  _model.py  openai.py  prompts.py
src/cbrkit/retain/: __init__.py  apply.py  build.py  storage.py
src/cbrkit/retrieval/: __init__.py  _apply.py  _build.py  _model.py  apply.py  build.py  common.py  genai.py  indexable.py  model.py  rag.py  rerank.py  synthesis.py  wrappers.py
src/cbrkit/retrieval/indexable/: __init__.py  _common.py  bm25.py  chromadb.py  embed.py  lancedb.py  pgvector.py  postgresql.py  sqlite_vec.py  zvec.py
src/cbrkit/retrieval/rerank/: __init__.py  _common.py  bi_encoder.py  cohere.py  cross_encoder.py  http.py  sentence_transformers.py  voyageai.py
src/cbrkit/reuse/: __init__.py  _apply.py  _build.py  _model.py  apply.py  build.py
src/cbrkit/revise/: __init__.py  apply.py  build.py
src/cbrkit/sim/: __init__.py  _aggregator.py  _attribute_value.py  aggregator.py  attribute_value.py  collections.py  embed.py  generic.py  numbers.py  pooling.py  strings.py  taxonomy.py  wrappers.py
src/cbrkit/sim/embed/: __init__.py  core.py  metrics.py
src/cbrkit/sim/embed/providers/: __init__.py  bm25.py  cohere.py  ollama.py  openai.py  pydantic_ai.py  sentence_transformers.py  spacy.py  sparse_encoder.py  voyageai.py
src/cbrkit/sim/graphs/: __init__.py  _alignment.py  _astar.py  _exhaustive.py  _isomorphism.py  _model.py  alignment.py  astar.py  brute_force.py  common.py  dfs.py  exhaustive.py  ged.py  greedy.py  isomorphism.py  lap.py  lsap.py  model.py  precompute.py  qap.py  vf2.py
src/cbrkit/sim/strings/: __init__.py  edit.py  embeddings.py  patterns.py  taxonomy.py
src/cbrkit/synthesis/: __init__.py  apply.py  build.py  model.py  prompts.py
src/cbrkit/synthesis/providers/: __init__.py  anthropic.py  cohere.py  google.py  instructor.py  model.py  ollama.py  openai.py  openai_agents.py  openai_completions.py  openai_responses.py  pydantic_ai.py  wrappers.py
tests/: conftest.py  test_aggregator.py  test_cycle.py  test_graph.py  test_indexable.py  test_rerank.py  test_retain.py  test_retrieve.py  test_reuse.py  test_revise.py  test_toml.py
