[project]
name = "cbrkit"
version = "0.28.5"
description = "Customizable Case-Based Reasoning (CBR) toolkit for Python with a built-in API and CLI"
authors = [{ name = "Mirko Lenz", email = "mirko@mirkolenz.com" }]
readme = "README.md"
keywords = [
    "cbr",
    "case-based reasoning",
    "api",
    "similarity",
    "nlp",
    "retrieval",
    "cli",
    "tool",
    "library",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
requires-python = ">=3.12"
dependencies = [
    "frozendict>=2,<3",
    "numpy>=1,<2; platform_machine == 'x86_64' and sys_platform == 'darwin'",
    "numpy>=2,<3; platform_machine != 'x86_64' or sys_platform != 'darwin'",
    "orjson>=3,<4",
    "pandas>=2,<3",
    "polars>=1,<2",
    "pydantic>=2,<3",
    "pyyaml>=6,<7",
    "rich>=13,<15",
    "rtoml>=0.12,<1",
    "scipy>=1,<2",
    "xmltodict>=1,<2",
]

[project.optional-dependencies]
all = ["cbrkit[api,cli,eval,graphs,graphviz,llm,nlp,timeseries,transformers]"]
api = [
    "cbrkit[cli]",
    "fastapi>=0.100,<1",
    "pydantic-settings>=2,<3",
    "python-multipart>=0.0.15,<1",
    "uvicorn[standard]>=0.30,<1",
    "fastmcp>=2,<3",
    "jsonref>=1,<2"
]
chunking = ["chonkie>=1,<2"]
cli = ["typer>=0.9,<1"]
eval = ["ranx>=0.3,<1"]
graphs = ["networkx>=3,<4", "rustworkx>=0.15,<1"]
graphviz = ["pygraphviz>=1,<2"]
llm = [
    "cohere>=5,<6",
    "voyageai>=0.3,<1",
    "ollama>=0.3,<1",
    "openai>=1,<2",
    "tiktoken>=0.8,<1",
    "anthropic>=0.40,<1",
    "google-genai>=1,<2",
    "instructor>=1,<2",
    "openai-agents>=0.2,<1",
    "pydantic-ai-slim>=1,<2",
]
nlp = [
    "bm25s[core,stem]>=0.2,<1",
    "levenshtein>=0.23,<0.26; platform_machine == 'x86_64' and sys_platform == 'darwin'",
    "levenshtein>=0.26,<1; platform_machine != 'x86_64' or sys_platform != 'darwin'",
    "nltk>=3,<4",
    "spacy>=3.7,<3.8; platform_machine == 'x86_64' and sys_platform == 'darwin'",
    "spacy>=3.8,<4; platform_machine != 'x86_64' or sys_platform != 'darwin'",
]
timeseries = ["minineedle>=3,<4"]
transformers = [
    "sentence-transformers>=3,<6",
    "torch>=2.2,<2.3; platform_machine == 'x86_64' and sys_platform == 'darwin'",
    "torch>=2.5,<3; platform_machine != 'x86_64' or sys_platform != 'darwin'",
    "transformers>=4,<5",
]

[project.urls]
Repository = "https://github.com/wi2trier/cbrkit"
Documentation = "https://wi2trier.github.io/cbrkit/"
Issues = "https://github.com/wi2trier/cbrkit/issues"
Changelog = "https://github.com/wi2trier/cbrkit/releases"

[project.scripts]
cbrkit = "cbrkit.cli:app"

[dependency-groups]
dev = ["pandas-stubs>=2,<3", "scipy-stubs>=1,<2"]
test = ["pytest>=8,<9", "pytest-cov>=7,<8"]
docs = ["pdoc>=15,<16"]

[build-system]
requires = ["uv-build>=0.7,<1"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["src", "tests"]
addopts = ["--cov=src/cbrkit", "--cov-report=term-missing", "--doctest-modules", "--import-mode=importlib"]
doctest_optionflags = ["NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL", "ELLIPSIS"]

[tool.uv]
default-groups = ["dev", "test", "docs"]

[tool.ruff.lint.pydocstyle]
convention = "google"
