[project]
name = "cbrkit"
version = "1.1.0"
description = "Customizable Case-Based Reasoning (CBR) toolkit for Python with a built-in API and CLI"
authors = [{ name = "Mirko Lenz", email = "mirko@mirkolenz.com" }]
readme = "README.md"
keywords = [
    "cbr",
    "case-based reasoning",
    "api",
    "similarity",
    "nlp",
    "retrieval",
    "cli",
    "tool",
    "library",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
requires-python = ">=3.13,<4"
dependencies = [
    "frozendict>=2,<3",
    "numpy>=2,<3",
    "orjson>=3,<4",
    "polars>=1,<2",
    "pydantic>=2,<3",
    "pyyaml>=6,<7",
    "rtoml>=0.12,<1",
    "scipy>=1,<2",
    "xmltodict>=1,<2",
]

[project.optional-dependencies]
# LLM providers
anthropic = ["anthropic>=0.40,<1"]
cohere = ["cohere>=5,<6"]
google = ["google-genai>=1,<2"]
instructor = ["instructor>=1,<2"]
ollama = ["ollama>=0.3,<1"]
openai = ["openai>=1,<3", "tiktoken>=0.8,<1"]
openai-agents = ["openai-agents>=0.2,<1"]
pydantic-ai = ["pydantic-ai-slim>=1,<2"]
voyageai = ["voyageai>=0.3,<1"]

# NLP / text processing
bm25 = ["bm25s[core,stem]>=0.2,<1"]
chunking = ["chonkie>=1,<2"]
levenshtein = ["levenshtein>=0.26,<1"]
nltk = ["nltk>=3,<4"]
spacy = ["rich>=13,<15", "spacy>=3.8,<4"]

# ML / embeddings
transformers = ["sentence-transformers>=3,<6", "torch>=2.5,<3", "transformers>=4,<6"]

# Graphs
graphs = ["networkx>=3,<4", "rustworkx>=0.15,<1"]
graphviz = ["pygraphviz>=1,<2"]

# Data
lancedb = ["lancedb>=0.20,<1"]
pandas = ["pandas>=2,<3"]
sql = ["sqlalchemy>=2,<3"]

# Tools
cli = ["rich>=13,<15", "typer>=0.9,<1"]
eval = ["ranx>=0.3,<1"]
timeseries = ["minineedle>=3,<4"]

# Entry points
api = [
    "cbrkit[cli]",
    "fastapi>=0.100,<1",
    "pydantic-settings>=2,<3",
    "python-multipart>=0.0.15,<1",
    "uvicorn[standard]>=0.30,<1",
    "fastmcp>=2,<3",
    "jsonref>=1,<2",
]

# Bundle
all = ["cbrkit[anthropic,api,bm25,chunking,cohere,eval,google,graphs,graphviz,instructor,lancedb,levenshtein,nltk,ollama,openai,openai-agents,pandas,pydantic-ai,spacy,sql,timeseries,transformers,voyageai]"]

[project.urls]
Repository = "https://github.com/wi2trier/cbrkit"
Documentation = "https://wi2trier.github.io/cbrkit/"
Issues = "https://github.com/wi2trier/cbrkit/issues"
Changelog = "https://github.com/wi2trier/cbrkit/releases"

[project.scripts]
cbrkit = "cbrkit.cli:app"

[dependency-groups]
dev = ["pandas-stubs>=2,<3", "scipy-stubs>=1,<2"]
test = ["pytest>=9,<10", "pytest-cov>=7,<8"]
docs = ["pdoc>=16,<17"]

[build-system]
requires = ["uv-build>=0.9,<1"]
build-backend = "uv_build"

[tool.pytest]
testpaths = ["src", "tests"]
addopts = ["--cov=src/cbrkit", "--cov-report=term-missing", "--doctest-modules", "--import-mode=importlib"]
doctest_optionflags = ["NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL", "ELLIPSIS"]

[tool.uv]
default-groups = ["dev", "test", "docs"]

[tool.ruff.lint.pydocstyle]
convention = "google"
