[project]
name = "cbrkit"
version = "1.5.1"
description = "Customizable Case-Based Reasoning (CBR) toolkit for Python with a built-in API and CLI"
authors = [{ name = "Mirko Lenz", email = "mirko@mirkolenz.com" }]
readme = "README.md"
license = "MIT"
keywords = [
  "cbr",
  "case-based reasoning",
  "api",
  "similarity",
  "nlp",
  "retrieval",
  "cli",
  "tool",
  "library",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Framework :: Pytest",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
  "Typing :: Typed",
]
requires-python = ">=3.13,<4"
dependencies = [
  "frozendict>=2,<3",
  "numpy>=2,<3",
  "orjson>=3,<4",
  "polars>=1,<2",
  "pydantic>=2,<3",
  "pyyaml>=6,<7",
  "rtoml>=0.12,<1",
  "scipy>=1,<2",
  "xmltodict>=1,<2",
]

[project.optional-dependencies]
# LLM providers
anthropic = ["anthropic>=0.40,<1"]
cohere = ["cohere>=7,<8"]
google = ["google-genai>=2,<3"]
http = ["httpx>=0.28,<1"]
instructor = ["instructor>=1,<2"]
ollama = ["ollama>=0.3,<1"]
openai = ["openai>=1,<3", "tiktoken>=0.8,<1"]
openai-agents = ["openai-agents>=0.2,<1"]
pydantic-ai = ["pydantic-ai-slim>=1,<2"]
voyageai = ["voyageai>=0.3,<1"]

# NLP / text processing
bm25 = ["bm25s[core,stem,indexing]>=0.3,<1"]
chunking = ["chonkie>=1,<2"]
levenshtein = ["levenshtein>=0.26,<1"]
nltk = ["nltk>=3,<4"]
spacy = ["spacy>=3.8,<4"]

# ML / embeddings
transformers = ["sentence-transformers>=4,<6", "torch>=2.5,<3", "transformers>=4,<6"]

# Graphs
graphs = ["networkx>=3,<4", "rustworkx>=0.15,<1"]
graphviz = ["pygraphviz>=1,<2"]

# Data
chromadb = ["chromadb>=1,<2"]
lancedb = ["lancedb>=0.20,<1"]
pandas = ["pandas>=2,<4"]
pgvector = ["pgvector>=0.4,<1", "cbrkit[sql]"]
sql = ["sqlalchemy[asyncio]>=2,<3"]
sqlite-vec = ["sqlite-vec>=0.1,<1", "aiosqlite>=0.20,<1", "cbrkit[sql]"]
zvec = ["zvec>=0.2,<1"]

# Tools
cli = ["rich>=14,<16", "typer>=0.20,<1"]
eval = ["ranx>=0.3,<1"]
timeseries = ["minineedle>=3,<4"]

# Entry points
api = [
  "cbrkit[cli]",
  "fastapi>=0.100,<1",
  "pydantic-settings>=2,<3",
  "python-multipart>=0.0.15,<1",
  "uvicorn[standard]>=0.30,<1",
  "fastmcp>=3,<4",
]

# Bundle
all = [
  "cbrkit[anthropic,api,bm25,chromadb,chunking,cohere,eval,google,graphs,graphviz,http,instructor,lancedb,levenshtein,nltk,ollama,openai,openai-agents,pandas,pgvector,pydantic-ai,spacy,sql,sqlite-vec,timeseries,transformers,voyageai,zvec]",
]

[project.urls]
Repository = "https://github.com/wi2trier/cbrkit"
Documentation = "https://wi2trier.github.io/cbrkit/"
Issues = "https://github.com/wi2trier/cbrkit/issues"
Changelog = "https://github.com/wi2trier/cbrkit/releases"

[project.scripts]
cbrkit = "cbrkit.cli:app"

[dependency-groups]
dev = ["pandas-stubs>=2,<4", "scipy-stubs>=1,<2"]
test = ["pytest>=9,<10", "pytest-cov>=7,<8"]
docs = ["pdoc>=16,<17"]

[build-system]
requires = ["uv-build>=0.9,<1"]
build-backend = "uv_build"

[tool.pytest]
testpaths = ["src", "tests"]
addopts = [
  "--cov=src/cbrkit",
  "--cov-report=term-missing",
  "--doctest-modules",
  "--import-mode=importlib",
]
doctest_optionflags = ["NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL", "ELLIPSIS"]

[tool.uv]
default-groups = ["dev", "test", "docs"]

[tool.uv.extra-build-dependencies]
pygraphviz = ["setuptools"]
cbor = ["setuptools"]
warc3-wet-clueweb09 = ["setuptools"]
zlib-state = ["setuptools"]
pystemmer = ["setuptools", "cython"]

[tool.ruff.lint.pydocstyle]
convention = "google"
